# IEEE-753-Single-Precision-Float-Manipulation

./: CMakeLists.txt  README.md  floatsStuff.c
